--- a/osa2/puhelinluettelo/src/App.css
+++ b/osa2/puhelinluettelo/src/App.css
@@ -27,7 +27,17 @@
 .App-link {
   color: #61dafb;
 }
-
+.notification {
+  {
+    color: red;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
